[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Button9Slice.png" type="Texture" id=1]
[ext_resource path="res://Images/Button9SliceHover.png" type="Texture" id=2]
[ext_resource path="res://Fonts/PixelRPG.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Minigames/Poster_Maker/PosterMaker.gd" type="Script" id=4]
[ext_resource path="res://Minigames/Poster_Maker/Images/Objective.png" type="Texture" id=5]
[ext_resource path="res://Minigames/Poster_Maker/Images/Clock.png" type="Texture" id=6]
[ext_resource path="res://Minigames/Poster_Maker/Images/Background.png" type="Texture" id=7]
[ext_resource path="res://Minigames/Poster_Maker/Images/WhiteCanvas.png" type="Texture" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "ClockAnim"
length = 3.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="PosterMaker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
position = Vector2( -32.1409, 56.2938 )
scale = Vector2( 0.407851, 0.622876 )
texture = ExtResource( 7 )

[node name="WhiteCanvas" type="Sprite" parent="."]
position = Vector2( 45, 90 )
texture = ExtResource( 8 )

[node name="ProgressBar" type="ProgressBar" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 13.9514
margin_top = 11.0595
margin_right = 76.9514
margin_bottom = 16.0595
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer2" type="VBoxContainer" parent="Game_Container"]
margin_left = 13.9514
margin_top = 11.0595
margin_right = 76.9514
margin_bottom = 58.0595
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Countdown" type="Label" parent="Game_Container/HBoxContainer2"]
visible = false
margin_right = 63.0
margin_bottom = 16.0
size_flags_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "25"
align = 2

[node name="Words_Created" type="Label" parent="Game_Container/HBoxContainer2"]
margin_top = 10.0
margin_right = 63.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "--------------"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected_Letters" type="Label" parent="Game_Container"]
margin_left = 0.529724
margin_top = 75.4108
margin_right = 90.5297
margin_bottom = 91.4108
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PlaceHolder"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Game_Container"]
margin_top = 103.27
margin_right = 90.0
margin_bottom = 115.27
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Game_Container/HBoxContainer"]
margin_left = 13.0
margin_right = 65.0
margin_bottom = 12.0

[node name="VBoxContainer" type="VBoxContainer" parent="Game_Container/HBoxContainer"]
margin_left = 69.0
margin_right = 77.0
margin_bottom = 12.0
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Game_Container/HBoxContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 8.0
margin_bottom = 10.0
rect_min_size = Vector2( 8, 8 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true

[node name="GameTimer" type="Timer" parent="Game_Container"]

[node name="Prompt_Screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.2674
margin_bottom = -58.7326
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Sprite" parent="Prompt_Screen"]
position = Vector2( 46.6141, 29.5838 )
rotation = -1.34914
scale = Vector2( 0.146127, 0.146127 )
texture = ExtResource( 5 )

[node name="Prompt" type="Label" parent="Prompt_Screen"]
margin_right = 90.0
margin_bottom = 16.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ache X palavras"
align = 1
valign = 1
autowrap = true

[node name="Clock" type="Sprite" parent="Prompt_Screen"]
position = Vector2( 45, 80 )
texture = ExtResource( 6 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Prompt_Screen/Clock"]
autoplay = "ClockAnim"
anims/ClockAnim = SubResource( 2 )

[node name="Start_Timer" type="Timer" parent="Prompt_Screen"]
autostart = true

[node name="Start_Count_Down" type="Label" parent="Prompt_Screen"]
visible = false
margin_top = 46.0
margin_right = 90.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
align = 1
autowrap = true

[node name="End_Screnn_Container" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 45
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End_Message" type="Label" parent="End_Screnn_Container"]
margin_top = 13.0
margin_right = 90.0
margin_bottom = 29.0
text = "PlaceHolder"
align = 1
autowrap = true

[node name="Final_Score" type="Label" parent="End_Screnn_Container"]
margin_top = 74.0
margin_right = 90.0
margin_bottom = 90.0
text = "PlaceHolder"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="End_Screnn_Container"]
margin_top = 135.0
margin_right = 90.0
margin_bottom = 147.0
alignment = 1

[node name="Try_Again_BTN" type="Button" parent="End_Screnn_Container/HBoxContainer"]
margin_left = 6.0
margin_right = 84.0
margin_bottom = 12.0
text = "Tente Novamente"

[connection signal="text_entered" from="Game_Container/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="Game_Container/GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="Prompt_Screen/Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="pressed" from="End_Screnn_Container/HBoxContainer/Try_Again_BTN" to="." method="_on_Try_Again_BTN_pressed"]
